# BLIP

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release-on-tag.yml
src/: lib.rs  main.rs
src/ble/: mod.rs
src/bridge/: mod.rs
src/midi/: mod.rs
